Fixed broken styles

--- a/MyLiverpool.Web.WebApiNext/ClientApp/src/styles.scss
+++ b/MyLiverpool.Web.WebApiNext/ClientApp/src/styles.scss
@@ -21,7 +21,6 @@ html {
 
 body {
     background-color: #f5f5f5;
-    display: table;
    // flex-direction: column;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     margin: 0;
